[package]
name = "neo4j-schema"
version = "0.1.0"
edition = "2024"
authors = [
  "c2fc2f <contact@c2fc2f.com>"
]
description = "A CLI tool that introspects Neo4j databases to generate human-readable schema"
readme = "README.md"
repository = "https://github.com/c2fc2f/neo4j-schema"
license = "MIT"
keywords = [
  "neo4j",
]
categories = [
  "command-line-utilities",
  "database"
]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[dependencies]
anyhow = "1"
clap   = { version = "4", features = ["derive", "env"] }
neo4rs = "0.8"
tokio  = { version = "1", features = ["full"] }
